--- a/TwLS.Common.csproj
+++ b/TwLS.Common.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Dash.cs" />
     <Compile Include="Data\ItemData.cs" />
     <Compile Include="Data\MasteryData.cs" />
+    <Compile Include="Data\SpellDatabase.cs" />
     <Compile Include="FakeClicks.cs" />
     <Compile Include="GamePacket.cs" />
     <Compile Include="Hacks.cs" />
